<resources>
    <string name="app_name">Llistapp</string>
    <string name="tv_presentacio">Menú Principal</string>
    <string name="BotoGestioAlum">Estudiants</string>
    <string name="BotoGestioAssig">Assignatures</string>
    <string name="BotoGestioAssist">Assistències</string>
    <string name="BotoEines">Eines</string>
    <string name="title_activity_gestiona_alumnes">Gestiona Alumnes</string>
    <string name="title_activity_validacio_assistencia">ValidacioAssistencia</string>
    <string name="title_activity_gestio_assignatures">GestioAssignatures</string>
    <string name="titol_gestioAlumnes">Gestió d\'Estudiants</string>
    <string name="help_item">Ajuda</string>
    <string name="search_item">Cerca</string>
    <string name="title_activity_edit_estudiant">EditEstudiant</string>
    <string name="hintNom">Nom</string>
    <string name="hintCognoms">Cognoms</string>
    <string name="hintDNI">DNI</string>
    <string name="hintEmail">Correu electrònic</string>
    <string name="btnGuarda">GUARDA</string>
    <string name="title_activity_nou_estudiant">Nou Estudiant</string>
    <string name="action_settings">Settings</string>
    <string name="addIcon">Afageix</string>
    <string name="aliasAssig">DAMO</string>
    <string name="nomAssig">Desenvolupament d\'Aplicacions Mòbils</string>
    <string name="nomEstudiant">Nom Cognom1 Cognom2</string>
    <string name="dniEstudiant">00000000X</string>
    <string name="hintNomAssignatura">Nom de l\'Assignatura</string>
    <string name="tv_matricualts">Escull alumnes dni_matriculats:</string>
    <string name="hintAliasAssignatura">Alias o nom simplificat</string>
    <string name="imgDesc">delete_item</string>
    <string name="tv_DataAssist">Dim 26 Des 2018 14:30:00</string>
    <string name="tv_seleccionaAssig">Selecciona Assignatura:</string>
    <string name="tv_info_assistents">Presents %1$d · Absents %2$d</string>
    <string name="iconitem">IconItem</string>
    <string name="desc_foto_birret">birret</string>
    <string name="desc_backgorund">fons</string>
    <string name="desc_camara">foto_camara</string>
    <string name="desc_persona">icona_persona</string>
    <string name="desc_dni">icona_dni</string>
    <string name="desc_mail">icona_mail</string>
    <string name="desc_delete">icona_eliminar</string>
    <string name="tv_nom_eina">Esborra dades NOM_TAULA</string>
    <string name="tv_desc_eina">Esborra tots els NOM_TAULA de la Base de Dades.</string>
    <string name="desc_edit">icona_editar</string>
    <string name="tv_empty_est">No hi ha Estudiants per mostrar</string>
    <string name="tv_empty_assig">No hi ha Assignatures per mostrar</string>
    <string name="tv_empty_assist">No hi ha Assistències per mostrar</string>
</resources>
